# genetic-snake

./: CMakeLists.txt  Makefile  README.md  build  genetic_functions.py  individual.py  main.py  miscellaneous.py  neural_network.py  neural_network_widget.py  nn_widget.py  pyproject.toml  run.py  settings.py  setup.py  snake.py  snake_env.py  snake_widget.py  storage.py  text_widget.py  utils.py
cpp/: module.cpp  snake_env.cpp
deep_q_learning/: agent.py  nnet.py  program.py
game_data/game_10/: directions.npy  food_spawns.npy
genetic_algorithm/: genetic_functions.py  individual.py  nnet.py  program.py  window.py
genetic_snake/: __init__.py  snake_env.py
genetic_snake/_C/: CMakeLists.txt  bindings.cpp  fitness_eval.cpp  snake_env.cpp
genetic_snake/cpp/: fitness_eval.cpp  fitness_eval.h  la.cpp  la.h  module.cpp  snake_env.cpp  snake_env.h
genetic_snake/genetic/: __init__.py  functional.py  ga.py  genome.py  individual.py
genetic_snake/gui/: __init__.py  gui_application.py  info_gui.py  network_gui.py  snake_gui.py
models/model_10/: layer_dim.npy
models/model_10/weights/: w0.npy  w1.npy  w2.npy
